add project files

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 ################################################################################
 
 /.vs
-/CSA-FS23/.vs/CSA-FS23/FileContentIndex
+/CSA-FS23/.vs
